// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowState nav list-item-list for vulnerability-management CLUSTER has trimmed stacks 1`] = `
Array [
  "CLUSTER CLUSTER-0 CLUSTER_CVE",
  "CLUSTER CLUSTER-0 COMPONENT",
  "CLUSTER CLUSTER-0 COMPONENT COMPONENT-2 CVE",
  "CVE-4 DEPLOYMENT",
  "CVE-4 IMAGE",
  "COMPONENT-2 DEPLOYMENT",
  "CLUSTER CLUSTER-0 COMPONENT COMPONENT-2 IMAGE",
  "IMAGE-4 CVE",
  "IMAGE-4 DEPLOYMENT",
  "IMAGE-4 IMAGE_COMPONENT",
  "IMAGE-4 IMAGE_CVE",
  "CLUSTER CLUSTER-0 CVE",
  "CLUSTER CLUSTER-0 CVE CVE-2 COMPONENT",
  "COMPONENT-4 DEPLOYMENT",
  "COMPONENT-4 IMAGE",
  "CVE-2 DEPLOYMENT",
  "CVE-2 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 COMPONENT COMPONENT-4 CVE",
  "CVE-6 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 COMPONENT COMPONENT-4 IMAGE",
  "IMAGE-6 CVE",
  "IMAGE-6 IMAGE_COMPONENT",
  "IMAGE-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 CVE CVE-4 COMPONENT",
  "COMPONENT-6 IMAGE",
  "CVE-4 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 COMPONENT COMPONENT-6 CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 CVE CVE-6 COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_CVE IMAGE_CVE-6 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE",
  "IMAGE-6 COMPONENT",
  "IMAGE-6 CVE",
  "IMAGE-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 NAMESPACE",
  "NAMESPACE-4 COMPONENT",
  "NAMESPACE-4 CVE",
  "NAMESPACE-4 IMAGE",
  "NAMESPACE-4 IMAGE_COMPONENT",
  "NAMESPACE-4 IMAGE_CVE",
  "NAMESPACE-4 POLICY",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 POLICY",
  "CLUSTER CLUSTER-0 IMAGE",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 COMPONENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 COMPONENT COMPONENT-4 CVE",
  "CVE-6 DEPLOYMENT",
  "COMPONENT-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 CVE",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 CVE CVE-4 COMPONENT",
  "COMPONENT-6 DEPLOYMENT",
  "CVE-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 DEPLOYMENT",
  "DEPLOYMENT-4 COMPONENT",
  "DEPLOYMENT-4 CVE",
  "DEPLOYMENT-4 IMAGE_COMPONENT",
  "DEPLOYMENT-4 IMAGE_CVE",
  "DEPLOYMENT-4 NAMESPACE",
  "DEPLOYMENT-4 POLICY",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-2 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE",
  "IMAGE-4 COMPONENT",
  "IMAGE-4 CVE",
  "IMAGE-4 DEPLOYMENT",
  "IMAGE-4 IMAGE_CVE",
  "CLUSTER CLUSTER-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "IMAGE_CVE-4 IMAGE",
  "CLUSTER CLUSTER-0 IMAGE_CVE",
  "IMAGE_CVE-2 DEPLOYMENT",
  "IMAGE_CVE-2 IMAGE",
  "CLUSTER CLUSTER-0 IMAGE_CVE IMAGE_CVE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "IMAGE_COMPONENT-4 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 COMPONENT COMPONENT-4 CVE",
  "CVE-6 DEPLOYMENT",
  "CVE-6 IMAGE",
  "COMPONENT-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 COMPONENT COMPONENT-4 IMAGE",
  "IMAGE-6 CVE",
  "IMAGE-6 DEPLOYMENT",
  "IMAGE-6 IMAGE_COMPONENT",
  "IMAGE-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 CVE CVE-4 COMPONENT",
  "COMPONENT-6 DEPLOYMENT",
  "COMPONENT-6 IMAGE",
  "CVE-4 DEPLOYMENT",
  "CVE-4 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 COMPONENT COMPONENT-6 CVE",
  "CVE-8 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 COMPONENT COMPONENT-6 IMAGE",
  "IMAGE-8 CVE",
  "IMAGE-8 IMAGE_COMPONENT",
  "IMAGE-8 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 CVE CVE-6 COMPONENT",
  "COMPONENT-8 IMAGE",
  "CVE-6 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 COMPONENT COMPONENT-8 CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 CVE CVE-8 COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 IMAGE_COMPONENT IMAGE_COMPONENT-8 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 IMAGE_CVE IMAGE_CVE-8 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE",
  "IMAGE-8 COMPONENT",
  "IMAGE-8 CVE",
  "IMAGE-8 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE_CVE",
  "IMAGE_CVE-8 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_CVE IMAGE_CVE-6 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-8 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 POLICY",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 COMPONENT COMPONENT-6 CVE",
  "CVE-8 DEPLOYMENT",
  "COMPONENT-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 CVE CVE-6 COMPONENT",
  "COMPONENT-8 DEPLOYMENT",
  "CVE-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 DEPLOYMENT",
  "DEPLOYMENT-6 COMPONENT",
  "DEPLOYMENT-6 CVE",
  "DEPLOYMENT-6 IMAGE_COMPONENT",
  "DEPLOYMENT-6 IMAGE_CVE",
  "DEPLOYMENT-6 POLICY",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE_CVE",
  "IMAGE_CVE-8 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 IMAGE_CVE",
  "IMAGE_CVE-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 IMAGE_CVE IMAGE_CVE-6 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-8 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE",
  "IMAGE-6 COMPONENT",
  "IMAGE-6 CVE",
  "IMAGE-6 DEPLOYMENT",
  "IMAGE-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 DEPLOYMENT",
  "IMAGE_CVE-6 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "IMAGE_CVE-4 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 DEPLOYMENT",
  "IMAGE_COMPONENT-6 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 POLICY",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 POLICY POLICY-4 DEPLOYMENT",
  "DEPLOYMENT-6 COMPONENT",
  "DEPLOYMENT-6 CVE",
  "DEPLOYMENT-6 IMAGE",
  "DEPLOYMENT-6 IMAGE_COMPONENT",
  "DEPLOYMENT-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NODE_COMPONENT",
  "CLUSTER CLUSTER-0 NODE_COMPONENT NODE_COMPONENT-2 NODE_CVE",
  "CLUSTER CLUSTER-0 NODE_CVE",
  "CLUSTER CLUSTER-0 NODE_CVE NODE_CVE-2 NODE_COMPONENT",
  "CLUSTER CLUSTER-0 POLICY",
  "CLUSTER CLUSTER-0 POLICY POLICY-2 DEPLOYMENT",
  "DEPLOYMENT-4 COMPONENT",
  "DEPLOYMENT-4 CVE",
  "DEPLOYMENT-4 IMAGE",
  "DEPLOYMENT-4 IMAGE_COMPONENT",
  "DEPLOYMENT-4 IMAGE_CVE",
  "DEPLOYMENT-4 NAMESPACE",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management CLUSTER_CVE has trimmed stacks 1`] = `
Array [
  "CLUSTER_CVE CLUSTER_CVE-0 CLUSTER",
  "CLUSTER-2 COMPONENT",
  "CLUSTER-2 CVE",
  "CLUSTER-2 DEPLOYMENT",
  "CLUSTER-2 IMAGE",
  "CLUSTER-2 IMAGE_COMPONENT",
  "CLUSTER-2 IMAGE_CVE",
  "CLUSTER-2 NAMESPACE",
  "CLUSTER-2 NODE_COMPONENT",
  "CLUSTER-2 NODE_CVE",
  "CLUSTER-2 POLICY",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management COMPONENT has trimmed stacks 1`] = `
Array [
  "COMPONENT COMPONENT-0 CVE",
  "CVE-2 DEPLOYMENT",
  "CVE-2 IMAGE",
  "COMPONENT COMPONENT-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 CVE",
  "DEPLOYMENT-2 IMAGE",
  "DEPLOYMENT-2 IMAGE_COMPONENT",
  "DEPLOYMENT-2 IMAGE_CVE",
  "DEPLOYMENT-2 NAMESPACE",
  "DEPLOYMENT-2 POLICY",
  "COMPONENT COMPONENT-0 IMAGE",
  "IMAGE-2 CVE",
  "IMAGE-2 DEPLOYMENT",
  "IMAGE-2 IMAGE_COMPONENT",
  "IMAGE-2 IMAGE_CVE",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management CVE has trimmed stacks 1`] = `
Array [
  "CVE CVE-0 COMPONENT",
  "COMPONENT-2 DEPLOYMENT",
  "COMPONENT-2 IMAGE",
  "CVE CVE-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 COMPONENT",
  "DEPLOYMENT-2 IMAGE",
  "DEPLOYMENT-2 IMAGE_COMPONENT",
  "DEPLOYMENT-2 IMAGE_CVE",
  "DEPLOYMENT-2 NAMESPACE",
  "DEPLOYMENT-2 POLICY",
  "CVE CVE-0 IMAGE",
  "IMAGE-2 COMPONENT",
  "IMAGE-2 DEPLOYMENT",
  "IMAGE-2 IMAGE_COMPONENT",
  "IMAGE-2 IMAGE_CVE",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management DEPLOYMENT has trimmed stacks 1`] = `
Array [
  "DEPLOYMENT DEPLOYMENT-0 CLUSTER",
  "CLUSTER-2 CLUSTER_CVE",
  "CLUSTER-2 COMPONENT",
  "CLUSTER-2 CVE",
  "CLUSTER-2 IMAGE",
  "CLUSTER-2 IMAGE_COMPONENT",
  "CLUSTER-2 IMAGE_CVE",
  "CLUSTER-2 NAMESPACE",
  "CLUSTER-2 NODE_COMPONENT",
  "CLUSTER-2 NODE_CVE",
  "CLUSTER-2 POLICY",
  "DEPLOYMENT DEPLOYMENT-0 COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 COMPONENT COMPONENT-2 CVE",
  "CVE-4 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 COMPONENT COMPONENT-2 IMAGE",
  "IMAGE-4 CVE",
  "IMAGE-4 IMAGE_COMPONENT",
  "IMAGE-4 IMAGE_CVE",
  "DEPLOYMENT DEPLOYMENT-0 CVE",
  "DEPLOYMENT DEPLOYMENT-0 CVE CVE-2 COMPONENT",
  "COMPONENT-4 IMAGE",
  "CVE-2 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 COMPONENT COMPONENT-4 CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 CVE CVE-4 COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 IMAGE_COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 IMAGE_CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE",
  "IMAGE-4 COMPONENT",
  "IMAGE-4 CVE",
  "IMAGE-4 IMAGE_CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_CVE",
  "IMAGE_CVE-2 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_CVE IMAGE_CVE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 NAMESPACE",
  "NAMESPACE-2 CLUSTER",
  "NAMESPACE-2 COMPONENT",
  "NAMESPACE-2 CVE",
  "NAMESPACE-2 IMAGE",
  "NAMESPACE-2 IMAGE_COMPONENT",
  "NAMESPACE-2 IMAGE_CVE",
  "NAMESPACE-2 POLICY",
  "DEPLOYMENT DEPLOYMENT-0 POLICY",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management IMAGE has trimmed stacks 1`] = `
Array [
  "IMAGE IMAGE-0 COMPONENT",
  "IMAGE IMAGE-0 COMPONENT COMPONENT-2 CVE",
  "CVE-4 DEPLOYMENT",
  "COMPONENT-2 DEPLOYMENT",
  "IMAGE IMAGE-0 CVE",
  "IMAGE IMAGE-0 CVE CVE-2 COMPONENT",
  "COMPONENT-4 DEPLOYMENT",
  "CVE-2 DEPLOYMENT",
  "IMAGE IMAGE-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 COMPONENT",
  "DEPLOYMENT-2 CVE",
  "DEPLOYMENT-2 IMAGE_COMPONENT",
  "DEPLOYMENT-2 IMAGE_CVE",
  "DEPLOYMENT-2 NAMESPACE",
  "DEPLOYMENT-2 POLICY",
  "IMAGE IMAGE-0 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-2 DEPLOYMENT",
  "IMAGE IMAGE-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "IMAGE IMAGE-0 IMAGE_CVE",
  "IMAGE_CVE-2 DEPLOYMENT",
  "IMAGE IMAGE-0 IMAGE_CVE IMAGE_CVE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management IMAGE_COMPONENT has trimmed stacks 1`] = `
Array [
  "IMAGE_COMPONENT IMAGE_COMPONENT-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 COMPONENT",
  "DEPLOYMENT-2 CVE",
  "DEPLOYMENT-2 IMAGE",
  "DEPLOYMENT-2 IMAGE_CVE",
  "DEPLOYMENT-2 NAMESPACE",
  "DEPLOYMENT-2 POLICY",
  "IMAGE_COMPONENT IMAGE_COMPONENT-0 IMAGE",
  "IMAGE-2 COMPONENT",
  "IMAGE-2 CVE",
  "IMAGE-2 DEPLOYMENT",
  "IMAGE-2 IMAGE_CVE",
  "IMAGE_COMPONENT IMAGE_COMPONENT-0 IMAGE_CVE",
  "IMAGE_CVE-2 DEPLOYMENT",
  "IMAGE_CVE-2 IMAGE",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management IMAGE_CVE has trimmed stacks 1`] = `
Array [
  "IMAGE_CVE IMAGE_CVE-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 COMPONENT",
  "DEPLOYMENT-2 CVE",
  "DEPLOYMENT-2 IMAGE",
  "DEPLOYMENT-2 IMAGE_COMPONENT",
  "DEPLOYMENT-2 NAMESPACE",
  "DEPLOYMENT-2 POLICY",
  "IMAGE_CVE IMAGE_CVE-0 IMAGE",
  "IMAGE-2 COMPONENT",
  "IMAGE-2 CVE",
  "IMAGE-2 DEPLOYMENT",
  "IMAGE-2 IMAGE_COMPONENT",
  "IMAGE_CVE IMAGE_CVE-0 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-2 DEPLOYMENT",
  "IMAGE_COMPONENT-2 IMAGE",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management NAMESPACE has trimmed stacks 1`] = `
Array [
  "NAMESPACE NAMESPACE-0 CLUSTER",
  "CLUSTER-2 CLUSTER_CVE",
  "CLUSTER-2 COMPONENT",
  "CLUSTER-2 CVE",
  "CLUSTER-2 DEPLOYMENT",
  "CLUSTER-2 IMAGE",
  "CLUSTER-2 IMAGE_COMPONENT",
  "CLUSTER-2 IMAGE_CVE",
  "CLUSTER-2 NODE_COMPONENT",
  "CLUSTER-2 NODE_CVE",
  "CLUSTER-2 POLICY",
  "NAMESPACE NAMESPACE-0 COMPONENT",
  "NAMESPACE NAMESPACE-0 COMPONENT COMPONENT-2 CVE",
  "CVE-4 DEPLOYMENT",
  "CVE-4 IMAGE",
  "COMPONENT-2 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 COMPONENT COMPONENT-2 IMAGE",
  "IMAGE-4 CVE",
  "IMAGE-4 DEPLOYMENT",
  "IMAGE-4 IMAGE_COMPONENT",
  "IMAGE-4 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 CVE",
  "NAMESPACE NAMESPACE-0 CVE CVE-2 COMPONENT",
  "COMPONENT-4 DEPLOYMENT",
  "COMPONENT-4 IMAGE",
  "CVE-2 DEPLOYMENT",
  "CVE-2 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 CLUSTER",
  "CLUSTER-4 CLUSTER_CVE",
  "CLUSTER-4 COMPONENT",
  "CLUSTER-4 CVE",
  "CLUSTER-4 IMAGE",
  "CLUSTER-4 IMAGE_COMPONENT",
  "CLUSTER-4 IMAGE_CVE",
  "CLUSTER-4 NODE_COMPONENT",
  "CLUSTER-4 NODE_CVE",
  "CLUSTER-4 POLICY",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 COMPONENT COMPONENT-4 CVE",
  "CVE-6 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 COMPONENT COMPONENT-4 IMAGE",
  "IMAGE-6 CVE",
  "IMAGE-6 IMAGE_COMPONENT",
  "IMAGE-6 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 CVE CVE-4 COMPONENT",
  "COMPONENT-6 IMAGE",
  "CVE-4 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 COMPONENT COMPONENT-6 CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 CVE CVE-6 COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_CVE IMAGE_CVE-6 IMAGE_COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE",
  "IMAGE-6 COMPONENT",
  "IMAGE-6 CVE",
  "IMAGE-6 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 POLICY",
  "NAMESPACE NAMESPACE-0 IMAGE",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 COMPONENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 COMPONENT COMPONENT-4 CVE",
  "CVE-6 DEPLOYMENT",
  "COMPONENT-4 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 CVE",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 CVE CVE-4 COMPONENT",
  "COMPONENT-6 DEPLOYMENT",
  "CVE-4 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 DEPLOYMENT",
  "DEPLOYMENT-4 CLUSTER",
  "DEPLOYMENT-4 COMPONENT",
  "DEPLOYMENT-4 CVE",
  "DEPLOYMENT-4 IMAGE_COMPONENT",
  "DEPLOYMENT-4 IMAGE_CVE",
  "DEPLOYMENT-4 POLICY",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-2 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE",
  "IMAGE-4 COMPONENT",
  "IMAGE-4 CVE",
  "IMAGE-4 DEPLOYMENT",
  "IMAGE-4 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "IMAGE_CVE-4 IMAGE",
  "NAMESPACE NAMESPACE-0 IMAGE_CVE",
  "IMAGE_CVE-2 DEPLOYMENT",
  "IMAGE_CVE-2 IMAGE",
  "NAMESPACE NAMESPACE-0 IMAGE_CVE IMAGE_CVE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "IMAGE_COMPONENT-4 IMAGE",
  "NAMESPACE NAMESPACE-0 POLICY",
  "NAMESPACE NAMESPACE-0 POLICY POLICY-2 DEPLOYMENT",
  "DEPLOYMENT-4 CLUSTER",
  "DEPLOYMENT-4 COMPONENT",
  "DEPLOYMENT-4 CVE",
  "DEPLOYMENT-4 IMAGE",
  "DEPLOYMENT-4 IMAGE_COMPONENT",
  "DEPLOYMENT-4 IMAGE_CVE",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management NODE_COMPONENT has trimmed stacks 1`] = `
Array [
  "NODE_COMPONENT NODE_COMPONENT-0 NODE_CVE",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management NODE_CVE has trimmed stacks 1`] = `
Array [
  "NODE_CVE NODE_CVE-0 NODE_COMPONENT",
]
`;

exports[`WorkflowState nav list-item-list for vulnerability-management POLICY has trimmed stacks 1`] = `
Array [
  "POLICY POLICY-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 COMPONENT",
  "DEPLOYMENT-2 CVE",
  "DEPLOYMENT-2 IMAGE",
  "DEPLOYMENT-2 IMAGE_COMPONENT",
  "DEPLOYMENT-2 IMAGE_CVE",
  "DEPLOYMENT-2 NAMESPACE",
]
`;
